--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
                         <span>VEREADOR</span>
                     </div>
                     <div class="d-1-3">
-                        ...
+                        <div class="numero pisca">3</div>
+                        <div class="numero">8</div>
                     </div>
                     <div class="d-1-4">
                         Nome: Fulano<br/>
@@ -27,7 +28,14 @@
                     </div>
                 </div>
                 <div class="d-1-rigth">
-                    ...
+                    <div class="d-1-image">
+                        <img src="images/84.jpg" alt=""/>
+                        Prefeito
+                    </div>
+                    <div class="d-1-image small">
+                        <img src="images/84_2.jpg" alt=""/>
+                        Vice-Prefeito
+                    </div>
                 </div>
             </div>
             <div class="d-2">
@@ -38,29 +46,31 @@
         </div>
         <div class="teclado">
             <div class="teclado--linha">
-                <div class="teclado--botao">1</div>
-                <div class="teclado--botao">2</div>
-                <div class="teclado--botao">3</div>
+                <div class="teclado--botao" onclick="clicou('1')">1</div>
+                <div class="teclado--botao" onclick="clicou('2')">2</div>
+                <div class="teclado--botao" onclick="clicou('3')">3</div>
             </div>
             <div class="teclado--linha">
-                <div class="teclado--botao">4</div>
-                <div class="teclado--botao">5</div>
-                <div class="teclado--botao">6</div>
+                <div class="teclado--botao" onclick="clicou('4')">4</div>
+                <div class="teclado--botao" onclick="clicou('5')">5</div>
+                <div class="teclado--botao" onclick="clicou('6')">6</div>
             </div>
             <div class="teclado--linha">
-                <div class="teclado--botao">7</div>
-                <div class="teclado--botao">8</div>
-                <div class="teclado--botao">9</div>
+                <div class="teclado--botao" onclick="clicou('7')">7</div>
+                <div class="teclado--botao" onclick="clicou('8')">8</div>
+                <div class="teclado--botao" onclick="clicou('9')">9</div>
             </div>
             <div class="teclado--linha">
-                <div class="teclado--botao">0</div>
+                <div class="teclado--botao" onclick="clicou('0')">0</div>
             </div>
             <div class="teclado--linha">
-                <div class="teclado--botao botao--branco">BRANCO</div>
-                <div class="teclado--botao botao--corrige">CORRIGE</div>
-                <div class="teclado--botao botao--confirme">CONFIRME</div>
+                <div class="teclado--botao botao--branco" onclick="branco()">BRANCO</div>
+                <div class="teclado--botao botao--corrige" onclick="corrige()">CORRIGE</div>
+                <div class="teclado--botao botao--confirme" onclick="confirme()">CONFIRME</div>
             </div>
         </div>
     </div>
+    <script src="etapas.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
